--- a/JS_Crash_Course/30_Arrow_Functions/index.html
+++ b/JS_Crash_Course/30_Arrow_Functions/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Function_Basics</title>
+    <title>Arrow_Functions</title>
 </head>
 <body>
-    <h1>Function_Basics</h1>
+    <h1>Arrow_Functions</h1>
 
     <script src="script.js"></script>
 </body>
