--- a/JS_Crash_Course/31_IIFE/index.html
+++ b/JS_Crash_Course/31_IIFE/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Function_Basics</title>
+    <title>IIFE (Immediately Invocked Function Expressions)</title>
 </head>
 <body>
-    <h1>Function_Basics</h1>
-
+    <h1>IIFE (Immediately Invocked Function Expressions)</h1>
     <script src="script.js"></script>
+    <script src="otherscript.js"></script>
 </body>
 </html>
