--- a/JS_Crash_Course/33_Execution_Context/index.html
+++ b/JS_Crash_Course/33_Execution_Context/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Function_Basics</title>
+    <title>Execution_Context</title>
 </head>
 <body>
-    <h1>Function_Basics</h1>
+    <h1>Execution_Context</h1>
 
     <script src="script.js"></script>
 </body>
