--- a/JS_Crash_Course/42_Ternary_Operator/index.html
+++ b/JS_Crash_Course/42_Ternary_Operator/index.html
@@ -6,7 +6,7 @@
     <title>Ternary_Operator</title>
 </head>
 <body>
-    <h1>Ternary_Operator</h1>
+    <h1 style="color:red">Ternary_Operator</h1>
 
     <script src="script.js"></script>
 </body>
