--- a/JS_Crash_Course/43_For_Loop/index.html
+++ b/JS_Crash_Course/43_For_Loop/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ternary_Operator</title>
+    <title>For_Loop</title>
 </head>
 <body>
-    <h1 style="color:red">Ternary_Operator</h1>
+    <h1>For_Loop</h1>
 
     <script src="script.js"></script>
 </body>
