--- a/JS_Crash_Course/50_Array_Filter/index.html
+++ b/JS_Crash_Course/50_Array_Filter/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Break_And_Continue</title>
+    <title>Array_Filter</title>
 </head>
 <body>
-    <h1>Break_And_Continue</h1>
+    <h1>Array_Filter</h1>
 
     <script src="script.js"></script>
 </body>
